--- a/backend/nixpacks.toml
+++ b/backend/nixpacks.toml
@@ -1,31 +1,17 @@
-# Railway Nixpacks Configuration for Laravel
-# https://nixpacks.com/docs/providers/php
+# Railway Nixpacks Configuration for Laravel (MINIMAL)
+# Optimized for fast builds under 10 minutes
 
 [phases.setup]
-nixPkgs = [
-    "php81",
-    "php81Packages.composer",
-    "php81Extensions.pdo_mysql",
-    "php81Extensions.mbstring",
-    "php81Extensions.xml",
-    "php81Extensions.curl",
-    "php81Extensions.gd",
-    "php81Extensions.zip",
-    "php81Extensions.bcmath",
-    "php81Extensions.intl"
-]
+nixPkgs = ["php81", "php81Packages.composer"]
 
 [phases.install]
-cmds = [
-    "composer install --no-dev --optimize-autoloader --no-interaction"
-]
+cmds = ["composer install --no-dev --optimize-autoloader --no-interaction --prefer-dist"]
 
 [phases.build]
 cmds = [
     "php artisan config:cache",
     "php artisan route:cache",
-    "php artisan view:cache",
-    "php artisan storage:link || true"
+    "php artisan view:cache"
 ]
 
 [start]
