--- a/backend/nixpacks.toml
+++ b/backend/nixpacks.toml
@@ -15,4 +15,4 @@ cmds = [
 ]
 
 [start]
-cmd = "php artisan config:clear && php artisan route:clear && php artisan config:cache && php artisan route:cache && php artisan migrate --force && php artisan serve --host=0.0.0.0 --port=$PORT"
+cmd = "php artisan storage:link && php artisan config:clear && php artisan route:clear && php artisan config:cache && php artisan route:cache && php artisan migrate --force && php artisan serve --host=0.0.0.0 --port=$PORT"
