--- a/backend/nixpacks.toml
+++ b/backend/nixpacks.toml
@@ -10,8 +10,7 @@ cmds = ["composer install --no-dev --optimize-autoloader --no-interaction --pref
 [phases.build]
 cmds = [
     "php artisan config:cache",
-    "php artisan route:cache",
-    "php artisan view:cache"
+    "php artisan route:cache"
 ]
 
 [start]
