--- a/backend/nixpacks.toml
+++ b/backend/nixpacks.toml
@@ -14,4 +14,4 @@ cmds = [
 ]
 
 [start]
-cmd = "php artisan storage:link && php artisan config:clear && php artisan route:clear && php artisan config:cache && php artisan route:cache && php artisan migrate --force && php artisan serve --host=0.0.0.0 --port=$PORT"
+cmd = "mkdir -p storage/app/public && rm -rf public/storage && ln -s ../storage/app/public public/storage && php artisan config:clear && php artisan route:clear && php artisan config:cache && php artisan route:cache && php artisan migrate --force && php artisan serve --host=0.0.0.0 --port=$PORT"
