--- a/backend/nixpacks.toml
+++ b/backend/nixpacks.toml
@@ -14,6 +14,9 @@ cmds = [
 
 [phases.build]
 cmds = [
+    "mkdir -p storage/framework/{sessions,views,cache}",
+    "mkdir -p storage/logs",
+    "mkdir -p bootstrap/cache",
     "php artisan config:cache",
     "php artisan route:cache"
 ]
